k8s/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: petclinic
  namespace: petclinic

spec:

  type: LoadBalancer

  selector:
    app: petclinic

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
